--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.gms:play-services-ads-lite:20.0.0'
+//    implementation 'com.google.android.gms:play-services-ads-lite:20.4.0'
+//    implementation 'com.google.android.gms:play-services-ads:20.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation("com.squareup.okhttp3:okhttp")
