--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,11 @@ dependencies {
 //    implementation 'com.google.android.gms:play-services-ads-lite:20.4.0'
 //    implementation 'com.google.android.gms:play-services-ads:20.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+//easy permissions
+    implementation 'pub.devrel:easypermissions:3.0.0'
 
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
-
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
