--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-inappmessaging-display:20.1.0'
     implementation 'com.google.firebase:firebase-messaging-ktx:22.0.0'
     implementation 'com.google.android.gms:play-services-base:17.6.0'
+    implementation 'com.google.firebase:firebase-analytics:19.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+
+
 //    implementation 'com.google.android.gms:play-services-ads-lite:20.4.0'
 //    implementation 'com.google.android.gms:play-services-ads:20.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
