--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
     id 'androidx.navigation.safeargs.kotlin'
+//    kotlin("android.extensions")
 }
 //apply plugin: "androidx.navigation.safeargs.kotlin"
 
@@ -59,7 +60,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 //easy permissions
     implementation 'pub.devrel:easypermissions:3.0.0'
-
+    def lottieVersion = "4.2.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
     implementation 'androidx.core:core-ktx:1.6.0'
